<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="EXPRESS_QUERY_FAIL">Express information query failed</string>
    <string name="GOODS_EVA_ALL">All</string>
    <string name="GOODS_EVA_G">Favorable</string>
    <string name="GOODS_EVA_L">Negative</string>
    <string name="GOODS_EVA_M">Neutral</string>
    <string name="GOODS_EVA_RATE">Favorable rate</string>
    <string name="GOODS_EVA_SCORE">Score</string>
    <string name="GOODS_EVA_USER">User reviews</string>
    <string name="GOODS_SERACH_COMP">Complete the search</string>
    <string name="GOODS_TYPE_1">Health Products</string>
    <string name="GOODS_TYPE_2">Cosmetic</string>
    <string name="GOODS_TYPE_3">Oil</string>
    <string name="GOODS_TYPE_4">Livestock</string>
    <string name="GOODS_TYPE_5">Cosmetics</string>
    <string name="GOODS_TYPE_6">Pesticide residues</string>
    <string name="GOODS_TYPE_7">Milk</string>
    <string name="MALL_PRODUCT">Products</string>
    <string name="MALL_PRODUCT_CAR">Added to cart successfully</string>
    <string name="MALL_PRODUCT_DETAIL">Details</string>
    <string name="MALL_PRODUCT_EVA">Evaluation</string>
    <string name="MALL_PRODUCT_SELECT">Please select product!</string>
    <string name="ORDER_AGAIN">Order again</string>
    <string name="ORDER_BUTTON_EVA">Evaluation</string>
    <string name="ORDER_BUY">Pay</string>
    <string name="ORDER_CANCEL">Cancel orders</string>
    <string name="ORDER_CONFIRM">Confirm orders</string>
    <string name="ORDER_DETAIL">Order details</string>
    <string name="ORDER_EVA">Order evaluation</string>
    <string name="ORDER_EXPRESS_ADDRESS">Address cannot be empty</string>
    <string name="ORDER_EXPRESS_DETAIL">Order express details</string>
    <string name="ORDER_EXPRESS_TYPE">Delivery:</string>
    <string name="ORDER_PRODUCT_SPEC">Please select spec</string>
    <string name="ORDER_SN">Order number</string>
    <string name="ORDER_TIP_CANCEL">Confirm cancellation of orders</string>
    <string name="ORDER_TIP_TITLE">Order Reminder</string>
    <string name="ORDER_VIEW_EVA">View evaluation</string>
    <string name="ORDER_VIEW_EXPRESS">View express</string>
    <string name="PAY_AMOUNT">You need to pay:¥</string>
    <string name="PAY_FAIL">Order payment failed</string>
    <string name="PAY_SUCCESS">Successful order payment</string>
    <string name="Street">Street</string>
    <string name="USER_CANCEL_PAY">Order payment failed</string>
    <string name="Uploaded">Uploaded</string>
    <string name="a_few_pictures">Pictures</string>
    <string name="about_me">About us</string>
    <string name="about_us">About us</string>
    <string name="address_information">Address information</string>
    <string name="again_password_not_null">Confirm password cannot be empty</string>
    <string name="all">All</string>
    <string name="all_photos">All Photos</string>
    <string name="all_select">Select all</string>
    <string name="allpicture">All pictures</string>
    <string name="anonymous">Anonymous</string>
    <string name="app_name">Bioeasy Pocket Reader</string>
    <string name="app_tip">Tip</string>
    <string name="are_you_sure">Are you sure to untie [WeChat]?</string>
    <string name="area_not_null">Region cannot be empty</string>
    <string name="available_SD_cards">No SD card available</string>
    <string name="batch">Batch</string>
    <string name="best_choice">Can only select</string>
    <string name="bind_other">Bind third party</string>
    <string name="bind_other_count">Bind third party account</string>
    <string name="bind_phone">Bind phone</string>
    <string name="bind_qq">QQ</string>
    <string name="bind_success">Binding successfully</string>
    <string name="binding_WeChat">Bind WeChat</string>
    <string name="binding_cell_phone">Bind phone</string>
    <string name="binding_phone">Binding phone number: %1$s</string>
    <string name="ble_close">Close</string>
    <string name="ble_connected">Connected devices: %s</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="ble_open">Open</string>
    <string name="ble_read">Read</string>
    <string name="ble_set">Set</string>
    <string name="ble_set_adv_interval_hint">32–24000（Unit 625μs）</string>
    <string name="ble_set_conn_interval_hint">16–3200（Unit1.25ms）</string>
    <string name="ble_title">Module settings</string>
    <string name="blood_glucose_meter">Glucose meter</string>
    <string name="blue_list">Connect Bluetooth</string>
    <string name="bluetooth_connection_disconnection">Bluetooth disconnected</string>
    <string name="bluetooth_unconnected">Bluetooth is not connected</string>
    <string name="bt_login">Login</string>
    <string name="bt_next">Next</string>
    <string name="bt_share">Share</string>
    <string name="bt_sign">Sign up</string>
    <string name="bt_test_again">Test again</string>
    <string name="bulum_select">Select album</string>
    <string name="buy_device_tip">No device, buy one</string>
    <string name="c_line">C line:</string>
    <string name="calcle">Cancel</string>
    <string name="camera">Camera</string>
    <string name="camera_privileges">Without permission, you need to set the camera permissions in settings.</string>
    <string name="cancel">Cancel</string>
    <string name="cancle">Cancel</string>
    <string name="change_phone">Replace phone</string>
    <string name="check_version">Check the new version</string>
    <string name="choice_model">Select specification model</string>
    <string name="circle">Circular</string>
    <string name="circle_square">Rounded Rectangle</string>
    <string name="city">City</string>
    <string name="click_times">Click seven times to open the debug mode, clicks:!</string>
    <string name="collect_goods">Unaccepted</string>
    <string name="commodity_details">Product details</string>
    <string name="complete_search">Complete the search</string>
    <string name="complete_the_search">Complete the Search</string>
    <string name="confire">Confirm</string>
    <string name="connected">Connected</string>
    <string name="connected_send">Send</string>
    <string name="connected_send_hint">Please enter hexadecimal characters up to 17 bytes</string>
    <string name="consignment">Unshipped</string>
    <string name="content">Content</string>
    <string name="coupon">Coupons</string>
    <string name="crop">Crop</string>
    <string name="current_unconnected">not connected</string>
    <string name="cycle">Periods</string>
    <string name="daily_input">Daily input</string>
    <string name="daily_input_standard">8400</string>
    <string name="data_upload_failure">Data upload failed</string>
    <string name="data_upload_success">Data uploaded successfully</string>
    <string name="date">Date</string>
    <string name="day_tasks">Daily tasks</string>
    <string name="debug_mode">Test data debug mode</string>
    <string name="decide_cancel_order">Confirm to cancel the order</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete successfully</string>
    <string name="demand_success">Submit requirements successfullyxxxsubmit requirements successfullyxxxsubmit requirements successfully xxx submit requirements successfully xxx submit requirements successfully</string>
    <string name="detailaddress_not_null">Detailed address can not be empty</string>
    <string name="details">Details</string>
    <string name="detection">Detecting...</string>
    <string name="detection_category">Detection Category:</string>
    <string name="detection_project">Test items</string>
    <string name="detection_project_one">Test item:</string>
    <string name="detection_record">Detection record</string>
    <string name="detection_result">Test results</string>
    <string name="detection_value">Test Value:</string>
    <string name="determine">OK</string>
    <string name="device_select_test_index">Select test indicators</string>
    <string name="device_setting_title">Parameter Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="disqualification">Unqualified ratio of different category</string>
    <string name="distribution_mode">Delivery:</string>
    <string name="dl_update">Download update file</string>
    <string name="edit">Edit</string>
    <string name="edit_againpwd_notnull">Confirm password cannot be empty</string>
    <string name="edit_agin_pwd">Enter new password again</string>
    <string name="edit_change_pwd">Change Password</string>
    <string name="edit_header">Modify profile photo</string>
    <string name="edit_new_pwd">Enter a new password</string>
    <string name="edit_newpwd_notnull">New password cannot be empty</string>
    <string name="edit_old_pwd">Enter the old password</string>
    <string name="edit_oldpwd_notnull">Old password cannot be empty</string>
    <string name="edit_pwd_success">Password changed successfully</string>
    <string name="forget_again_pwd">Confirm password</string>
    <string name="forget_new_pwd">New password</string>
    <string name="free_freight">Exclude freight</string>
    <string name="menu_home">Home</string>
    <string name="menu_mine">My account</string>
    <string name="menu_record">Record</string>
    <string name="menu_shopping">Product</string>
    <string name="menu_test">Test</string>
    <string name="move_collector">Move to favorites</string>
    <string name="negative_batch">Negative batch:</string>
    <string name="positive_batch">Positive batch:</string>
    <string name="pwd_success_go_main">Back to Top</string>
    <string name="register_finish">Finish</string>
    <string name="register_next">Next</string>
    <string name="register_obtain_verification_code">Verify Code</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_verification_code">Verify Code</string>
    <string name="sample">Sample</string>
    <string name="sample_name">Sample’s Name</string>
    <string name="select_pic">Select profile photo</string>
    <string name="settlement">Settlement</string>
    <string name="test_food">Detected food:</string>
    <string name="test_result_one">Test result:</string>
    <string name="test_totalNumber">Total times of detection:</string>
    <string name="total_one">Total:</string>
    <string name="tv_blue_input_data">Input data</string>
    <string name="tv_test_ng">Excessive analysis and treatment</string>
    <string name="tv_three_check">Third Party Retest</string>
</resources>