<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:skin="http://schemas.android.com/android/skin" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/id_rl_foot" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <CheckBox android:id="@+id/id_cb_select_all" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:button="@drawable/selector_check_bg" android:text="@string/all_select" android:layout_centerVertical="true"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/id_ll_normal_all_state" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/TextSmall" android:textColor="#ff0000" android:gravity="right" android:id="@+id/id_tv_totalPrice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:text="@string/total_one"/>
            <TextView android:textSize="@dimen/TextSmall" android:textColor="#666666" android:gravity="right" android:id="@+id/tvPostPrice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/free_freight"/>
        </LinearLayout>
        <TextView android:textSize="16dp" android:textColor="#fff" android:gravity="center_vertical" android:id="@+id/tv_totalCount_jiesuan" android:background="#ff5000" android:paddingLeft="20dp" android:paddingTop="5dp" android:paddingRight="20dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/settlement"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/id_ll_editing_all_state" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
        <TextView android:textSize="16dp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/id_tv_save_star_all" android:background="@android:color/holo_orange_light" android:paddingLeft="20dp" android:paddingTop="15dp" android:paddingRight="20dp" android:paddingBottom="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/move_collector"/>
        <TextView android:textSize="16dp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/id_tv_delete_all" android:background="#ff5000" android:paddingLeft="20dp" android:paddingTop="15dp" android:paddingRight="20dp" android:paddingBottom="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete"/>
    </LinearLayout>
</RelativeLayout>
