<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/all_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/comm_toolbar" android:layout_width="match_parent" android:layout_height="@dimen/toolbar_height" layout="@layout/comm_toolbar"/>
    <RelativeLayout android:id="@+id/rl_one" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10dp">
        <EditText android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:textColorHint="@color/hint_color" android:id="@+id/et_phone" android:background="@drawable/btn_corner_bg" android:paddingLeft="12dp" android:paddingRight="8dp" android:layout_width="330dp" android:layout_height="@dimen/height44" android:hint="@string/register_phone" android:maxLength="16" android:layout_centerHorizontal="true" android:inputType="phone"/>
        <FrameLayout android:id="@+id/fl" android:layout_width="330dp" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="@dimen/height44">
                <Button android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/bt_code" android:background="@drawable/shape_obtain_normal" android:visibility="visible" android:clickable="false" android:layout_width="wrap_content" android:layout_height="28dp" android:layout_marginRight="10dp" android:text="@string/register_obtain_verification_code" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
        </FrameLayout>
        <EditText android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:textColorHint="@color/hint_color" android:id="@+id/et_code" android:background="@drawable/btn_corner_bg" android:paddingLeft="12dp" android:paddingRight="8dp" android:visibility="visible" android:layout_width="330dp" android:layout_height="@dimen/height44" android:layout_marginTop="@dimen/margin_10dp" android:hint="@string/register_verification_code" android:maxLength="16" android:layout_below="@+id/et_phone" android:layout_centerHorizontal="true" android:inputType="phone"/>
        <Button android:textSize="@dimen/text_size_14" android:textColor="@color/white" android:id="@+id/btn_next" android:background="@drawable/selector_login_btn" android:layout_width="330dp" android:layout_height="@dimen/height44" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/register_next" android:layout_below="@+id/et_code" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_two" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10dp">
        <EditText android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:textColorHint="@color/hint_color" android:id="@+id/et_new_pwd" android:background="@drawable/btn_corner_bg" android:paddingLeft="12dp" android:paddingRight="8dp" android:visibility="visible" android:layout_width="330dp" android:layout_height="@dimen/height44" android:hint="@string/forget_new_pwd" android:password="true" android:singleLine="true" android:maxLength="16" android:layout_centerHorizontal="true" android:inputType="numberPassword"/>
        <EditText android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:textColorHint="@color/hint_color" android:id="@+id/et_agin_pwd" android:background="@drawable/btn_corner_bg" android:paddingLeft="12dp" android:paddingRight="8dp" android:visibility="visible" android:layout_width="330dp" android:layout_height="@dimen/height44" android:layout_marginTop="@dimen/margin_10dp" android:hint="@string/forget_again_pwd" android:password="true" android:singleLine="true" android:maxLength="16" android:layout_below="@+id/et_new_pwd" android:layout_centerHorizontal="true" android:inputType="numberPassword"/>
        <Button android:textSize="@dimen/text_size_14" android:textColor="@color/white" android:id="@+id/btn_finsh" android:background="@drawable/selector_login_btn" android:layout_width="330dp" android:layout_height="@dimen/height44" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/register_finish" android:layout_below="@+id/et_agin_pwd" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_three" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp">
        <ImageView android:id="@+id/iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/complete" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="@dimen/text_size_18" android:id="@+id/tv_o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/edit_pwd_success" android:layout_below="@+id/iv" android:layout_centerHorizontal="true"/>
        <Button android:textSize="@dimen/text_size_14" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_back_main" android:background="@drawable/selector_login_btn" android:layout_width="330dp" android:layout_height="@dimen/height44" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/pwd_success_go_main" android:layout_below="@+id/tv_o" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>
