<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/all_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_12" android:gravity="center" android:layout_width="match_parent" android:layout_height="@dimen/height" android:text="@string/select_pic"/>
        <View android:background="#dddddd" android:layout_width="match_parent" android:layout_height="1px" android:alpha="0.8"/>
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:gravity="center" android:id="@+id/tv_album" android:layout_width="match_parent" android:layout_height="@dimen/height" android:text="@string/bulum_select"/>
        <View android:background="#dddddd" android:layout_width="match_parent" android:layout_height="1px" android:alpha="0.8"/>
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:gravity="center" android:id="@+id/tv_carmer" android:layout_width="match_parent" android:layout_height="@dimen/height" android:text="@string/camera"/>
        <View android:background="#dddddd" android:layout_width="match_parent" android:layout_height="1px" android:alpha="0.8"/>
    </LinearLayout>
    <RelativeLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/black_alpha_deep" android:gravity="center" android:id="@+id/tv_cancel" android:layout_width="match_parent" android:layout_height="@dimen/height" android:text="@string/calcle"/>
    </RelativeLayout>
</LinearLayout>
